# GeodeModV2

./: CMakeLists.txt  about.md  mod.json
.github/workflows/: build.yml
src/: main.cpp
